feat(Nodes): added mock DB nodes and improved UI
